--- a/src/QuickApp/ClientApp/src/app/components/app.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/app.component.html
@@ -67,7 +67,7 @@
                         <div class="app-component vcenter_text center-block">
                             <p class="text-center text-muted">
                                 <span class="appName" style="font-style:italic">FSW TFS</span><span class="appName">FSW TFS</span> &copy; {{getYear()}}
-                                <a href="https://github.com/Mynken">Git Hub</a>
+                               <span>version 1.0.0</span>
                             </p>
                         </div>
                     </footer>
