--- a/src/QuickApp/ClientApp/src/app/components/view/clients/client-create/client-create.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/view/clients/client-create/client-create.component.html
@@ -2,8 +2,8 @@
 <h1>Create client</h1>
 <p-panel>
         <div [@fadeInOut] class="container" >
-            <form (ngSubmit)="onSubmit(clientForm.value)" [formGroup]="clientForm">
-                <p-panel header="Client Information" >
+            <form (ngSubmit)="onSubmit()" [formGroup]="clientForm">
+                <p-panel header="Client information" >
                     <table class="table table-striped table-hover table-responsive">
                         <tbody>
                             <tr>
