--- a/src/QuickApp/ClientApp/src/app/components/app.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/app.component.html
@@ -19,6 +19,7 @@
                     <ul class="app-component nav navbar-nav nav-pills navBarPadding">
                         <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink=""><span class="glyphicon glyphicon-home"></span></a></li>
                         <li routerLinkActive="active"  *ngIf="canViewCustomers"><a routerLink="/clients">Clients</a></li>
+                        <li routerLinkActive="active"  *ngIf="canViewCustomers"><a routerLink="/projects">Projects</a></li>
                     </ul>
                     <ul class="app-component nav navbar-nav nav-pills navBarPadding navbar-right">
                         <li (click)="logout()"><a href="javascript:;"><span class="glyphicon glyphicon-log-out"></span> {{'mainMenu.Logout' | translate}}</a></li>
@@ -66,7 +67,7 @@
                     <footer>
                         <div class="app-component vcenter_text center-block">
                             <p class="text-center text-muted">
-                                <span class="appName" style="font-style:italic">FSW TFS</span><span class="appName">FSW TFS</span> &copy; {{getYear()}}
+                                <span class="appName">FSW TFS</span> &copy; {{getYear()}}
                                <span>version 1.0.0</span>
                             </p>
                         </div>
