--- a/src/QuickApp/ClientApp/src/app/components/controls/fsw-controls/fsw-button/fsw-button.component.css
+++ b/src/QuickApp/ClientApp/src/app/components/controls/fsw-controls/fsw-button/fsw-button.component.css
@@ -1,4 +1,4 @@
-.ui-button.ui-button-success.ui-state-default:hover {
+/* .ui-button.ui-button-success.ui-state-default:hover {
     background-color: #4cae4c;
     border-color: #5cb85c;
     color: #fff;
@@ -38,4 +38,4 @@
     background-color: #f2f2f2;
     border-color: #ccc;
     color: #373a3c;
-}
+} */
