--- a/src/QuickApp/ClientApp/src/app/components/view/clients/client-create/client-create.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/view/clients/client-create/client-create.component.html
@@ -12,7 +12,7 @@
                                         <label class="col-sm-3 control-label">{{'client.FullName' | translate}}</label>
                                         <div class="input-group col-lg-4">
                                             <fsw-custom-input [validations]="{required:'error.Required' | translate}">
-                                                <input pInputText pKeyFilter="alphanum" inputRef class="form-control" [(ngModel)]="client.fullName" formControlName="fullName" type="text" />
+                                                <input pInputText inputRef class="form-control" [(ngModel)]="client.fullName" formControlName="fullName" type="text" />
                                               </fsw-custom-input>
                                         </div>
                                     </div>
