--- a/src/QuickApp/ClientApp/src/styles.css
+++ b/src/QuickApp/ClientApp/src/styles.css
@@ -39,7 +39,7 @@ input.form-control.is-required-status, textarea.form-control.is-required-status,
 }
 
 .ng-invalid:not(form) {
-    border-left: 5px solid #a94442; /*E03930*/
+    /* border-left: 5px solid #a94442; E03930  fix? or delete*/
 }
 
 .bootstrap-select.ng-novalidation > .dropdown-toggle {
